# NemLanguage

./: .gitignore  CMakeLists.txt  LICENSE.md  NEMLexer.g4  NEMParser.g4  ROADMAP.md  TODO.md  pom.xml
.devcontainer/: Dockerfile  devcontainer.json
cmake/: Antlr.cmake  ExternalAntlr4Cpp.cmake  LLVM.cmake
documentation/current/: Function.md  Operators.md  Program.md  Variable.Md
documentation/current/contracts/: Number.md
documentation/current/types/: Booleans.md  Integers.md  Reals.md
documentation/next/: NEXT.md  Operators.md
documentation/next/types/: Arrays.md  Enums.md  Optionals.md  Structs.md  Tuples.md  Unions.md
include/nem/antlr/: AstComputer.hpp  ComputeAstVisitor.hpp  ParseTreeValue.hpp  ParseTreeVisitor.hpp
include/nem/ast/: Ast.hpp  Forward.hpp  ForwardAst.hpp  ImplNode.hpp  Info.hpp  Node.hpp  Serialization.hpp  Visitor.hpp
include/nem/ast/element/: Block.hpp  Call.hpp  Expressions.hpp  File.hpp  Function.hpp  Identifier.hpp  Instructions.hpp  ListOfEnumValues.hpp  ListOfStructAttribs.hpp  ListOfTypes.hpp  ListOfUnionTypes.hpp  Types.hpp
include/nem/ast/element/helper/: Adapters.hpp  Declarations.hpp  Definitions.hpp  ForEach.hpp  ListOf.hpp  Serialization.hpp  Visitor.hpp
include/nem/ir/: IRBuilder.hpp  IRModule.hpp  IROptimizer.hpp  Jit.hpp
include/nem/ir/util/: LiteralParser.hpp  NamedValueRegister.hpp
include/nem/parser/: ParseTreeVisitor.hpp  Parser.hpp  ParserRule.hpp
include/nem/semantic/: ComputeIRVisitor.hpp  DumpAstVisitor.hpp
include/nem/semantic/analysis/: TypeVisitor.hpp
include/nem/semantic/symbol/: Forward.hpp  Symbol.hpp  SymbolError.hpp  SymbolTable.hpp  SymbolTableBuilder.hpp  SymbolTableComputer.hpp
include/nem/semantic/type/: TypeError.hpp
include/nem/semantic/util/: LiteralParser.hpp  VariableRegister.hpp
include/nem/util/: Macros.hpp  SourceInfo.hpp  VisitorHelper.hpp
src/: nemc.cpp
src/antlr/: AstComputer.cpp
src/antlr/ComputeAstVisitor/: Expressions.cpp  Instructions.cpp  LValues.cpp  TopLevels.cpp  Types.cpp  Visitor.cpp
src/antlr/ParseTreeVisitor/: Expressions.cpp  Files.cpp  Functions.cpp  Helpers.cpp  Instructions.cpp  Types.cpp
src/ast/: Comparator.cpp  Info.cpp  Visitor.cpp
src/ir/: IRModule.cpp  IROptimizer.cpp  Jit.cpp
src/ir/IRBuilder/: Expressions.cpp  File.cpp  Function.cpp  IRBuilder.cpp  Instructions.cpp  Types.cpp
src/ir/util/: LiteralParser.cpp  NamedValueRegister.cpp
src/main/antlr4/: NEMLexer.g4  NEMParser.g4
src/main/java/org/nem/: App.java
src/main/java/org/nem/ast/: AbstractSyntaxTree.java  AstComputer.java  FileContent.java
src/main/java/org/nem/ast/expression/: ArithExpr.java  ArithExpression.java  ArithOp.java  ArithOperation.java  ExprArith.java  ExprDecr.java  ExprFnCall.java  ExprIncr.java  ExprLValue.java  ExprMinus.java  ExprNum.java  Expression.java  LValueExpr.java
src/main/java/org/nem/ast/function/: Function.java  Parameter.java
src/main/java/org/nem/ast/instruction/: Assign.java  AssignOp.java  Assignment.java  ConstDef.java  FnCall.java  Instruction.java  PostDecr.java  PostIncr.java  PreDecr.java  PreIncr.java  VarDecl.java  VarDef.java
src/main/java/org/nem/ast/type/: NativeType.java  Type.java  TypeFactory.java
src/main/java/org/nem/ast/value/: LValue.java  LValueDecr.java  LValueIncr.java  LValueVar.java  Variable.java
src/main/java/org/nem/ast/visitor/: ExprVisitor.java  FileContentVisitor.java  FnVisitor.java  InstrVisitor.java  ParamVisitor.java
src/main/java/org/nem/grammar/: NEMLexer.interp  NEMLexer.java  NEMLexer.tokens  NEMParser.interp  NEMParser.java  NEMParser.tokens  NEMParserBaseListener.java  NEMParserBaseVisitor.java  NEMParserListener.java  NEMParserVisitor.java
src/main/java/org/nem/grammar/visitor/: ExprVisitor.java  FileContentVisitor.java  FnVisitor.java  InstrVisitor.java  LValueVisitor.java  ParamVisitor.java
src/main/java/org/nem/llvm/: App.java  Factorial.java  Interpretor.java
src/main/java/org/nem/visitor/: FileContentVisitor.java  FnVisitor.java  InstrVisitor.java  ParamSeqVisitor.java  ParamVisitor.java
src/parser/: Parser.cpp
src/parser/ParseTreeVisitor/: Expressions.cpp  File.cpp  Function.cpp  Helpers.cpp  Instructions.cpp  Types.cpp
src/semantic/: DumpAstVisitor.cpp
src/semantic/ComputeIRVisitor/: Expressions.cpp  Instructions.cpp  LValues.cpp  TopLevels.cpp  Types.cpp  Visitor.cpp
src/semantic/symbol/: SymbolTable.cpp  SymbolTableBuilder.cpp  SymbolTableComputer.cpp
src/semantic/util/: LiteralParser.cpp  VariableRegister.cpp
src/test/java/org/nem/antlr/: NemLexerTest.java
src/test/java/org/nem/ast/: AstComputerTest.java
src/test/resources/org/nem/antlr/ast/: basic_fn_def.nem
src/test/resources/org/nem/antlr/parser/: class.nem  function.nem  instructions.nem  interface.nem  module.nem  (+3 more)
src/test/resources/org/nem/ast/: basic_fn_def.nem
src/test/resources/org/nem/grammar/: function.nem
test/: CMakeLists.txt
test/resources/: execution.nem  instructions.nem  symbol.nem
test/resources/ir/IRBuilder/: call_f.ir  call_f.nem  function_main.ir  function_main.nem  main.ir
test/resources/ir/jit/: return_one.ir  return_zero.ir
test/src/antlr/: CMakeLists.txt
test/src/antlr/ComputeAstVisitor/: Expressions.cpp  Fixture.hpp  Instructions.cpp  LValues.cpp  TopLevels.cpp  Types.cpp
test/src/antlr/ParseTreeVisitor/: Expressions.cpp  Files.cpp  Fixture.hpp  Functions.cpp  Instructions.cpp  LValues.cpp  Types.cpp
test/src/ast/: CMakeLists.txt  Comparator.cpp
test/src/ast/serialization/: Expressions.cpp  File.cpp  Fixture.hpp  Instructions.cpp  LValues.cpp  TopLevels.cpp  Types.cpp
test/src/ir/IRBuilder/: CMakeLists.txt  Expressions.cpp  Fixture.hpp  Function.cpp  Instructions.cpp  Types.cpp
test/src/ir/jit/: CMakeLists.txt  Fixture.hpp  return_int.cpp
test/src/ir/util/: CMakeLists.txt  LiteralParser.cpp
test/src/parser/: CMakeLists.txt
test/src/parser/ParseTreeVisitor/: Expressions.cpp  File.cpp  Function.cpp  Includes.hpp  Instructions.cpp  Types.cpp
test/src/semantic/: CMakeLists.txt  ComputeIRVisitorTests.cpp
test/src/semantic/symbol/: SymbolTableComputerTests.cpp
(+3 files in other folders)
